(2001/06/25 - broeker) Fix SF bug #435535: two uses of yytext[] had been left 
	               over in fscanner.l, causing incorrect compression of
		       keywords #define and #include.
(2001/06/19 - broeker) More bugfixes and changes to flex scanner. Handling
	               of preprocessing directives treats whitespace and
		       garbage after the keyword more gently. It also avoids
		       treating lex patterns as preprocessing directives. And 
		       enum/struct/union definitions without a tag are no
		       longer written out to the database, which should help
		       to get rid of 'cannot get sourceline' error messages.
		       Also a new rule to compress whitespace sequences by
		       means of a flex rule (should to be faster than 
		       hand-coding).
(2001/06/15 - broeker) Bugfix to flex scanner: comments after an #endif, 
	               without any whitespace in between, would be dumped
		       to stdout.
(2001/06/15 - broeker) Minor documentation glitch in manpage and online help
	               screen: set of keys to choose from matches found 
		       contains 0-9, not 1-9. 
(2001/06/01 - broeker) New version of fscanner.l, and lots of
	               small changes to other source files, too. Avoids
		       (ab)use of yytext[] as a temporary buffer by unrelated
		       pieces of code, and changes exported variables of the
		       scanned line from lex-internal yyleng and my_yyleng 
		       to my_yytext and my_yyleng. New header files scanner.h
		       and lookup.h. 
(2001/06/01 - broeker) Fix 64bit-related bug in invlib.c that caused the symbol
                       'sun' to not be found on DigitalUnix/Alpha platform.
(2001/05/30 - dixon) arrow and editing keys can be now used at the input line
(2001/05/30 - duell) invname database issue fix.
(2001/05/20 - garret)  Fixed some mishaps in ocs.
(2001/04/30 - broeker) Fixed signed char casting bug in dicode compression. 